<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>war</packaging>
    <parent>
        <groupId>com.gepardec</groupId>
        <artifactId>gepardec-gamertrack</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>gamertrack-db</artifactId>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.gepardec</groupId>
            <artifactId>gamertrack-domain</artifactId>
            <version>${project.version}</version>
        </dependency>


    </dependencies>

</project>